--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,35 @@
 site_name: My Docs
 theme:
   name: material
+language: "zh"
+# 自定义目录结构
+nav:
+  - 介绍: index.md
+  - 文章: 
+    - 测试: articles\test.md
+# Markdown语法拓展
+markdown_extensions:
+  - admonition
+  - codehilite:
+      guess_lang: false
+      linenums: false
+  - toc:
+      permalink: true
+  - footnotes
+  - meta
+  - def_list
+  - pymdownx.arithmatex
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:pymdownx.emoji.to_png
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tasklist
+  - pymdownx.tilde
