--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,6 +166,7 @@ nav:
   - 环境生态学: 
     - 第一章-对物理环境的适应：水和营养物质: articles\guolu\第一章-对物理环境的适应：水和营养物质.md
     - 第二章-对物理环境的适应：光，能量和热量: articles\guolu\第二章-对物理环境的适应：光，能量和热量.md
+    - 第三章-对物理环境的适应：气候和土壤: articles\guolu\第三章-对物理环境的适应：气候和土壤.md
     - 第九章-种间关系，种间相互作用: articles\guolu\第九章-种间关系，种间相互作用.md
 
 extra_javascript:
