--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,10 @@ repo_name: Tom2021-vice.github.io
 repo_url: https://github.com/Tom2021-vice/taketake
 
 # Copyright
-copyright: Copyright &copy; 2022 汤姆
+copyright: >
+  Copyright &copy; 2022 Tom2021-vice –
+  <a href="#__consent">Change cookie settings</a>
+
 
 # Configuration
 theme:
@@ -57,15 +60,15 @@ theme:
     # - content.tabs.link
     - content.tooltips
     # - header.autohide
-    # - navigation.expand
-    - navigation.indexes
-    # - navigation.instant
+    # - navigation.expand #导航扩展
+    - navigation.indexes #索引
+    # - navigation.instant #即时加载
     # - navigation.prune
-    - navigation.sections
-    - navigation.tabs
-    # - navigation.tabs.sticky
+    - navigation.sections #部分导航
+    - navigation.tabs #导航选项卡
+    # - navigation.tabs.sticky #粘性导航选项卡
     - navigation.top
-    - navigation.tracking
+    - navigation.tracking #锚点跟踪
     - search.highlight
     - search.share
     - search.suggest
@@ -73,21 +76,21 @@ theme:
     # - toc.integrate
   palette:
     - scheme: default
-      primary: indigo
-      accent: indigo
+      primary: deep orange
+      accent: amber
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - scheme: slate
-      primary: indigo
-      accent: indigo
+      primary: lime
+      accent: light green
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
-  font:
-    text: Roboto
-    code: Roboto Mono
-  favicon: assets/favicon.png
+  font: false #禁用谷歌字体
+#    text: Roboto
+#    code: Roboto Mono
+  favicon: assets/favicon.png #网站图标 路径：assets/images/favicon.png
   icon:
     logo: logo
 
@@ -101,6 +104,20 @@ plugins:
 
 # Customization
 extra:
+#网站语言选择器
+#  alternate:
+#    - name: 简体中文
+#      link: /zh/ 
+#      lang: zh
+#    - name: English
+#      link: /en/
+#      lang: en
+#Cookie consent
+#  consent:
+#    title: Cookie 同意书
+#    description: >- 
+#      我们使用Cookie来识别您的重复访问和偏好，并衡量我们文档的有效性，以及用户是否找到他们正在搜索的内容。如果您同意，您将帮助我们改进文档。
+# We use cookies to recognize your repeated visits and preferences, as well as to measure the effectiveness of our documentation and whether users find what they're searching for. With your consent, you're helping us to make our documentation better.
   analytics:
     provider: google
     property: !ENV GOOGLE_ANALYTICS_KEY
@@ -111,6 +128,7 @@ extra:
       link: https://space.bilibili.com/446115938?spm_id_from=333.999.0.0
     - icon: fontawesome/solid/paper-plane
       link: mailto:<1340974656@qq.com> 
+
 
 # Extensions
 markdown_extensions:
@@ -153,6 +171,7 @@ markdown_extensions:
   - pymdownx.tilde
   - pymdownx.snippets
 
+
 # Page tree
 nav:
   - 介绍: index.md
@@ -167,10 +186,15 @@ nav:
     - 第一章-对物理环境的适应：水和营养物质: articles\guolu\第一章-对物理环境的适应：水和营养物质.md
     - 第二章-对物理环境的适应：光，能量和热量: articles\guolu\第二章-对物理环境的适应：光，能量和热量.md
     - 第三章-对物理环境的适应：气候和土壤: articles\guolu\第三章-对物理环境的适应：气候和土壤.md
+    - 第四章-生态学中生物群系的概念: articles\guolu\第四章-生态学中生物群系的概念.md
     - 第九章-种间关系，种间相互作用: articles\guolu\第九章-种间关系，种间相互作用.md
 
 extra_javascript:
   - javascripts/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+#额外的CSS颜色在\docs\stylesheets\extra_css中编辑
+#extra_css:
+#  - stylesheets/extra.css
+
 
