--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,13 +180,14 @@ nav:
     - demo: articles\guolu\demo.md
   - 好文共赏: 
     - 不为彼岸只为海: articles\chetong\不为彼岸只为海.md
-  - 技术教程: articles\guolu\hello.md
+  - 技术教程: articles\guolu\Adobe.md
   - 好物推荐: articles\guolu\hello.md
   - 环境生态学: 
     - 第一章-对物理环境的适应：水和营养物质: articles\guolu\第一章-对物理环境的适应：水和营养物质.md
     - 第二章-对物理环境的适应：光，能量和热量: articles\guolu\第二章-对物理环境的适应：光，能量和热量.md
     - 第三章-对物理环境的适应：气候和土壤: articles\guolu\第三章-对物理环境的适应：气候和土壤.md
     - 第四章-生态学中生物群系的概念: articles\guolu\第四章-生态学中生物群系的概念.md
+    - 第五章-适应和进化: articles\guolu\第五章-适应和进化.md
     - 第九章-种间关系，种间相互作用: articles\guolu\第九章-种间关系，种间相互作用.md
 
 extra_javascript:
