--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -188,6 +188,7 @@ nav:
     - 第三章-对物理环境的适应：气候和土壤: articles\guolu\第三章-对物理环境的适应：气候和土壤.md
     - 第四章-生态学中生物群系的概念: articles\guolu\第四章-生态学中生物群系的概念.md
     - 第五章-适应和进化: articles\guolu\第五章-适应和进化.md
+    - 第六章-生命周期和进化适应性: articles\guolu\第六章-生命周期和进化适应性.md
     - 第九章-种间关系，种间相互作用: articles\guolu\第九章-种间关系，种间相互作用.md
 
 extra_javascript:
